Fix layout issue

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 100%;
   overflow: hidden;
